force-app/main/default/objects/Room_Type__c/fields/Bedroom_Type__c.field-meta.xml
<CustomField>
    <fullName>Bedroom_Type__c</fullName>
    <label>Bedroom Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bedroom Standard</fullName>
            </value>
            <value>
                <fullName>Bedroom Superior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>