force-app/main/default/objects/Room_Type__c/fields/Unique_Identifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier_Code__c</fullName>
    <label>Unique Identifier Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>