force-app/main/default/objects/Room_Type__c/recordTypes/Additional_Guest.recordType-meta.xml
<RecordType>
    <fullName>Additional_Guest</fullName>
    <active>true</active>
    <label>Additional Guest</label>
</RecordType>