force-app/main/default/objects/Room_Type__c/recordTypes/Base_Guest.recordType-meta.xml
<RecordType>
    <fullName>Base_Guest</fullName>
    <active>true</active>
    <label>Base Guest</label>
</RecordType>