force-app/main/default/objects/Room_Type__c/recordTypes/Double.recordType-meta.xml
<RecordType>
    <fullName>Double</fullName>
    <active>true</active>
    <label>Double</label>
</RecordType>