force-app/main/default/objects/Room_Type__c/recordTypes/Single.recordType-meta.xml
<RecordType>
    <fullName>Single</fullName>
    <active>true</active>
    <label>Single</label>
</RecordType>