force-app/main/default/objects/Room_Type__c/recordTypes/Twin_Share.recordType-meta.xml
<RecordType>
    <fullName>Twin_Share</fullName>
    <active>true</active>
    <label>Twin Share</label>
</RecordType>